--- a/problems/108.convert-sorted-array-to-binary-search-tree.en.md
+++ b/problems/108.convert-sorted-array-to-binary-search-tree.en.md
@@ -29,10 +29,7 @@ One possible answer is: [0,-3, 9,-10, null,5], which can represent the following
 
 ## Company
 
--Ali
--Tencent
--Baidu
--Byte
+-Ali -Tencent -Baidu -Byte
 
 - airbnb
 
@@ -58,15 +55,15 @@ JS Code:
 
 ```js
 var sortedArrayToBST = function (nums) {
-	// Since the array is sorted, one idea is to divide the array into two halves, one half is the left subtree and the other half is the right subtree
-	// Then use the “recursive nature of the tree” to complete the operation recursively.
-	if (nums.length === 0) return null;
-	const mid = nums.length >> 1;
-	const root = new TreeNode(nums[mid]);
+  // Since the array is sorted, one idea is to divide the array into two halves, one half is the left subtree and the other half is the right subtree
+  // Then use the “recursive nature of the tree” to complete the operation recursively.
+  if (nums.length === 0) return null;
+  const mid = nums.length >> 1;
+  const root = new TreeNode(nums[mid]);
 
-	root.left = sortedArrayToBST(nums.slice(0, mid));
-	root.right = sortedArrayToBST(nums.slice(mid + 1));
-	return root;
+  root.left = sortedArrayToBST(nums.slice(0, mid));
+  root.right = sortedArrayToBST(nums.slice(mid + 1));
+  return root;
 };
 ```
 
@@ -85,8 +82,7 @@ return root
 
 **Complexity analysis**
 
--Time complexity:$O(N)$
--Spatial complexity: Each recursion copies the space of N, so the spatial complexity is $O(N^2)$
+-Time complexity:$O(N)$ -Spatial complexity: Each recursion copies the space of N, so the spatial complexity is $O(N^2)$
 
 However, there is actually no need to open up new space：
 
@@ -169,12 +165,10 @@ return root
 
 **Complexity analysis**
 
--Time complexity:$O(N)$
--Spatial complexity: Since it is a balanced binary tree, the overhead of the implicit call stack is $O(logN)$
+-Time complexity:$O(N)$ -Spatial complexity: Since it is a balanced binary tree, the overhead of the implicit call stack is $O(logN)$
 
 For more questions, please visit my LeetCode questions warehouse:https://github.com/azl397985856/leetcode . There are already 37K stars.
 
-Public account 【[Force Buckle plus] (https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg )】
-Zhihu Column 【[Lucifer-Zhihu] (https://www.zhihu.com/people/lu-xiao-13-70 )】
+Public account 【[Force Buckle plus](https://p.ipic.vip/n8gbxo.jpg)】 Zhihu Column 【[Lucifer-Zhihu](https://www.zhihu.com/people/lu-xiao-13-70)】
 
 Pay attention, don't get lost!
