--- a/problems/1260.shift-2d-grid.en.md
+++ b/problems/1260.shift-2d-grid.en.md
@@ -47,8 +47,7 @@ prompt：
 
 ## Pre-knowledge
 
--[array](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
--Mathematics
+-[array](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md) -Mathematics
 
 ## Company
 
@@ -88,10 +87,9 @@ Since it is easy, the above approach is barely acceptable, so we will consider o
 
 ### Idea
 
-If we look closely at the matrix, we will find that in fact, such matrix migration is regular. As shown in the figure：
-![image](https://p.ipic.vip/6w6n0m.jpg)
+If we look closely at the matrix, we will find that in fact, such matrix migration is regular. As shown in the figure： ![image](https://p.ipic.vip/6w6n0m.jpg)
 
-Therefore, this problem has been transformed into our one-dimensional matrix transfer problem. LeetCode also has the original title [189. Rotating array](https://leetcode-cn.com/problems/rotate-array /), at the same time, I also wrote an article [Cyclic shift algorithm that liberal arts students can understand] (https://lucifer.ren/blog/2019/12/11/rotate-list /) To discuss this specifically, in the end we used the cubic rotation method. The relevant mathematical proofs are also written. They are very detailed and will not be repeated here.
+Therefore, this problem has been transformed into our one-dimensional matrix transfer problem. LeetCode also has the original title [189. Rotating array](https://leetcode-cn.com/problems/rotate-array /), at the same time, I also wrote an article [Cyclic shift algorithm that liberal arts students can understand](https://lucifer.ren/blog/2019/12/11/rotate-list /) To discuss this specifically, in the end we used the cubic rotation method. The relevant mathematical proofs are also written. They are very detailed and will not be repeated here.
 
 LeetCode really likes to change the soup without changing the medicine.
 
@@ -148,8 +146,7 @@ return res
 
 **Complexity analysis**
 
--Time complexity:$O(N)$
--Spatial complexity:$O(1)$
+-Time complexity:$O(N)$ -Spatial complexity:$O(1)$
 
 ## Related topics
 
@@ -157,7 +154,7 @@ return res
 
 ## Reference
 
--[Cyclic shift algorithm that liberal arts students can understand] (https://lucifer . ren/blog/2019/12/11/rotate-list/)
+-[Cyclic shift algorithm that liberal arts students can understand](https://lucifer . ren/blog/2019/12/11/rotate-list/)
 
 For more questions, please visit my LeetCode questions warehouse:https://github.com/azl397985856/leetcode . There are already 37K stars.
 
