--- a/problems/20.valid-parents.en.md
+++ b/problems/20.valid-parents.en.md
@@ -42,10 +42,7 @@ Output: true
 
 ## Company
 
--Ali
--Baidu
--Tencent
--Byte
+-Ali -Baidu -Tencent -Byte
 
 - airbnb
 - amazon
@@ -60,7 +57,7 @@ Output: true
 
 ### Idea
 
-Regarding the idea of this question, Deng Junhui spoke very well. Students who have not seen it can take a look at it. [Video address] (http://www.xuetangx.com/courses/course-v1:TsinghuaX +30240184+sp/courseware/ad1a23c053df4501a3facd66ef6ccfa9/8d6f450e7f7a445098ae1d507fda80f6/).
+Regarding the idea of this question, Deng Junhui spoke very well. Students who have not seen it can take a look at it. [Video address](http://www.xuetangx.com/courses/course-v1:TsinghuaX +30240184+sp/courseware/ad1a23c053df4501a3facd66ef6ccfa9/8d6f450e7f7a445098ae1d507fda80f6/).
 
 Use the stack to traverse the input string
 
@@ -85,7 +82,7 @@ It is worth noting that if the topic requires only one type of bracket, then we 
 1. Basic characteristics and operation of the stack
 2. You can use arrays to simulate stacks
 
-For example, in: push out: pop is the stack. In: push out shift is the queue. However, the queue implemented by this algorithm has a relatively high time complexity when deleting elements in the header. For details, you can refer to [double-ended queue deque] (https://zh.wikipedia.org/wiki/%E5%8F%8C%E7%AB%AF%E9%98%9F%E5%88%97 ).
+For example, in: push out: pop is the stack. In: push out shift is the queue. However, the queue implemented by this algorithm has a relatively high time complexity when deleting elements in the header. For details, you can refer to [double-ended queue deque](https://zh.wikipedia.org/wiki/%E5%8F%8C%E7%AB%AF%E9%98%9F%E5%88%97).
 
 ### Code
 
@@ -153,8 +150,7 @@ return len(stack) == 0
 
 **Complexity analysis**
 
--Time complexity:$O(N)$
--Spatial complexity:$O(N)$
+-Time complexity:$O(N)$ -Spatial complexity:$O(N)$
 
 ##O(1) space
 
@@ -198,8 +194,7 @@ return false;
 
 **Complexity analysis**
 
--Time complexity:$O(N)$
--Spatial complexity:$O(1)$
+-Time complexity:$O(N)$ -Spatial complexity:$O(1)$
 
 ## Regular matching
 
@@ -226,18 +221,17 @@ JavaScript:
 
 ```js
 var isValid = function (s) {
-	while (s.includes("[]") || s.includes("()") || s.includes("{}")) {
-		s = s.replace("[]", "").replace("()", "").replace("{}", "");
-	}
-	s = s.replace("[]", "").replace("()", "").replace("{}", "");
-	return s.length === 0;
+  while (s.includes("[]") || s.includes("()") || s.includes("{}")) {
+    s = s.replace("[]", "").replace("()", "").replace("{}", "");
+  }
+  s = s.replace("[]", "").replace("()", "").replace("{}", "");
+  return s.length === 0;
 };
 ```
 
 **Complexity analysis**
 
--Time complexity: depends on the implementation of the regularization engine
--Spatial complexity: depends on the implementation of the regularization engine
+-Time complexity: depends on the implementation of the regularization engine -Spatial complexity: depends on the implementation of the regularization engine
 
 ## Related topics
 
@@ -245,8 +239,7 @@ var isValid = function (s) {
 
 ## Extension
 
--If you are asked to check whether the XML tag is closed, how to check, and further, if you want to implement a simple XML parser, how should you implement it?
--In fact, this kind of problem can be further extended. We can parse tag syntax like HTML, such as `<p></p><body></body>`
+-If you are asked to check whether the XML tag is closed, how to check, and further, if you want to implement a simple XML parser, how should you implement it? -In fact, this kind of problem can be further extended. We can parse tag syntax like HTML, such as `<p></p><body></body>`
 
 For more questions, please visit my LeetCode questions warehouse:https://github.com/azl397985856/leetcode . There are already 37K stars.
 
