--- a/problems/437.path-sum-iii.en.md
+++ b/problems/437.path-sum-iii.en.md
@@ -39,18 +39,13 @@ Return 3. Paths with sum equal to 8 have:
 
 ## Company
 
--Ali
--Tencent
--Baidu
--Byte
+-Ali -Tencent -Baidu -Byte
 
 ## Idea
 
-This question requires us to solve the path from any node to the descendant nodes and return it to the specified value.
-Note that here, it does not necessarily start from the root node, nor does it necessarily end at the leaf node.
+This question requires us to solve the path from any node to the descendant nodes and return it to the specified value. Note that here, it does not necessarily start from the root node, nor does it necessarily end at the leaf node.
 
-A simple idea is to solve it directly recursively. The spatial complexity O(n) and time complexity are between O(nlogn) and O(N^2).，
-Specific code：
+A simple idea is to solve it directly recursively. The spatial complexity O(n) and time complexity are between O(nlogn) and O(N^2).， Specific code：
 
 ```js
 /**
@@ -62,11 +57,11 @@ Specific code：
  */
 // the number of the paths starting from self
 function helper(root, sum) {
-	if (root === null) return 0;
-	const l = helper(root.left, sum - root.val);
-	const r = helper(root.right, sum - root.val);
+  if (root === null) return 0;
+  const l = helper(root.left, sum - root.val);
+  const r = helper(root.right, sum - root.val);
 
-	return l + r + (root.val === sum ? 1 : 0);
+  return l + r + (root.val === sum ? 1 : 0);
 }
 /**
  * @param {TreeNode} root
@@ -74,25 +69,23 @@ function helper(root, sum) {
  * @return {number}
  */
 var pathSum = function (root, sum) {
-	// Spatial complexity O(n) Time complexity is between O(nlogn) and O(N^2)
-	// tag: dfs tree
-	if (root === null) return 0;
-	// the number of the paths starting from self
-	const self = helper(root, sum);
-	// we don't know the answer, so we just pass it down
-	const l = pathSum(root.left, sum);
-	// we don't know the answer, so we just pass it down
-	const r = pathSum(root.right, sum);
+  // Spatial complexity O(n) Time complexity is between O(nlogn) and O(N^2)
+  // tag: dfs tree
+  if (root === null) return 0;
+  // the number of the paths starting from self
+  const self = helper(root, sum);
+  // we don't know the answer, so we just pass it down
+  const l = pathSum(root.left, sum);
+  // we don't know the answer, so we just pass it down
+  const r = pathSum(root.right, sum);
 
-	return self + l + r;
+  return self + l + r;
 };
 ```
 
-However, there is also an algorithm with better spatial complexity, which uses hashmaps to avoid double calculations. The time complexity and spatial complexity are both O(n).
-This idea is an upgraded version of'subarray-sum-equals-k`. If you can solve that question O(n), this question will not be very difficult.，
-Just replaced the array with a binary tree. For specific ideas, you can see [This topic] (. /560.subarray-sum-equals-k.md )
+However, there is also an algorithm with better spatial complexity, which uses hashmaps to avoid double calculations. The time complexity and spatial complexity are both O(n). This idea is an upgraded version of'subarray-sum-equals-k`. If you can solve that question O(n), this question will not be very difficult.， Just replaced the array with a binary tree. For specific ideas, you can see [This topic](. /560.subarray-sum-equals-k.md )
 
-There is a difference here. Let me explain why there is a 'hashmap[acc] = hashmap[acc] - 1;`， The reason is very simple, that is, when we use DFS, when we go back from the bottom, the value of map should also go back. If you are more familiar with the backtracking method， It should be easy to understand. If you are not familiar with it, you can refer to [this topic] (./46.permutations.md ), this question is through'templist. pop()` is done.
+There is a difference here. Let me explain why there is a 'hashmap[acc] = hashmap[acc] - 1;`， The reason is very simple, that is, when we use DFS, when we go back from the bottom, the value of map should also go back. If you are more familiar with the backtracking method， It should be easy to understand. If you are not familiar with it, you can refer to [this topic](./46.permutations.md ), this question is through'templist. pop()` is done.
 
 In addition, I drew a picture, I believe you will understand after reading it.
 
@@ -110,8 +103,7 @@ See the code area below for specific implementation.
 
 ## Analysis of key points
 
--Exchange space for time through hashmap
--For this kind of continuous element summation problem, there is a common idea. You can refer to [This topic] (./560.subarray-sum-equals-k.md )
+-Exchange space for time through hashmap -For this kind of continuous element summation problem, there is a common idea. You can refer to [This topic](./560.subarray-sum-equals-k.md)
 
 ## Code
 
@@ -164,8 +156,7 @@ return helper(root, 0, sum, hashmap);
 
 **Complexity analysis**
 
--Time complexity:$O(N)$
--Spatial complexity:$O(N)$
+-Time complexity:$O(N)$ -Spatial complexity:$O(N)$
 
 For more questions, please visit my LeetCode questions warehouse:https://github.com/azl397985856/leetcode . There are already 37K stars.
 
