--- a/daily/2019-08-13.md
+++ b/daily/2019-08-13.md
@@ -1,10 +1,12 @@
-# 毎日一题 -  417. 太平洋大西洋水流问题
+# 毎日一题 - 417. 太平洋大西洋水流问题
 
 ## 信息卡片
 
-* 时间：2019-08-13
-* 题目链接：https://leetcode-cn.com/problems/pacific-atlantic-water-flow
-- tag：`Backtracking`  `DFS`
+- 时间：2019-08-13
+- 题目链接：https://leetcode-cn.com/problems/pacific-atlantic-water-flow
+
+* tag：`Backtracking` `DFS`
+
 ## 题目描述
 
 给定一个 m x n 的非负整数矩阵来表示一片大陆上各个单元格的高度。“太平洋”处于大陆的左边界和上边界，而“大西洋”处于大陆的右边界和下边界。
@@ -15,15 +17,14 @@
 
 提示：
 
-输出坐标的顺序不重要
-m 和 n 都小于150
+输出坐标的顺序不重要 m 和 n 都小于 150
 
 示例：
 
 ```
 给定下面的 5x5 矩阵:
 
-  太平洋 ~   ~   ~   ~   ~ 
+  太平洋 ~   ~   ~   ~   ~
        ~  1   2   2   3  (5) *
        ~  3   2   3  (4) (4) *
        ~  2   4  (5)  3   1  *
@@ -33,25 +34,18 @@ m 和 n 都小于150
 
 返回:
 
-[[0, 4], [1, 3], [1, 4], [2, 2], [3, 0], [3, 1], [4, 0]] (上图中带括号的单元).
+[[0, 4], [1, 3], [1, 4], [2, 2], [3, 0], [3, 1], [4, 0]](上图中带括号的单元).
 ```
-
-
 
 ## 参考答案
 
-- 方法1：直接采用回溯法 超时
+- 方法 1：直接采用回溯法 超时
 
-直接判断 水流既可以流动到“太平洋”，又能流动到“大西洋”的陆地单元的坐标
-采用方法是
-回溯法（英语：backtracking）是暴力搜索法中的一种。
-在最坏的情况下，回溯法会导致一次复杂度为指数时间的计算。
-在这个题目中，这个题目中正好就是如此。
-因为需要等到上下左右全部计算完毕才有确定答案。
+直接判断 水流既可以流动到“太平洋”，又能流动到“大西洋”的陆地单元的坐标采用方法是回溯法（英语：backtracking）是暴力搜索法中的一种。在最坏的情况下，回溯法会导致一次复杂度为指数时间的计算。在这个题目中，这个题目中正好就是如此。因为需要等到上下左右全部计算完毕才有确定答案。
 
 m 和 n =150，肯定超时。
 
-- 方法2：动态规划+回溯法
+- 方法 2：动态规划+回溯法
 
 思路：
 
@@ -61,8 +55,7 @@ m 和 n =150，肯定超时。
 
 最后将探测结果进行合并即可。合并的条件就是当前单元既能流入太平洋又能流入大西洋。
 
-![集合](https://p.ipic.vip/r02fm7.jpg)
-扩展：
+![集合](https://p.ipic.vip/r02fm7.jpg) 扩展：
 
 如果题目改为能够流入大西洋或者太平洋，我们只需要最后合并的时候，条件改为求或即可
 
@@ -124,7 +117,6 @@ var pacificAtlantic = function(matrix) {
 };
 ```
 
-
 - C++ Code
 
   ```c++
@@ -139,12 +131,12 @@ var pacificAtlantic = function(matrix) {
   		int col = matrix[0].size();
   		if ( 0 == col )
   			return(out);
-  
+
   		/* 能流动到“太平洋"的陆地 */
   		vector<vector<bool> > dp1( row, vector<bool>( col, false ) );
   		/* 能流动到“大西洋"的陆地 */
   		vector<vector<bool> > dp2( row, vector<bool>( col, false ) );
-  
+
   		/* 从第一行/最后一行出发寻找连同节点，不变的x坐标 */
   		for ( int j = 0; j < col; j++ )
   		{
@@ -157,7 +149,7 @@ var pacificAtlantic = function(matrix) {
   			dfs( i, 0, INT_MIN, matrix, dp1 );
   			dfs( i, col - 1, INT_MIN, matrix, dp2 );
   		}
-  
+
   		vector<int> temp( 2 );
   		for ( int i = 0; i < row; i++ )
   		{
@@ -174,9 +166,9 @@ var pacificAtlantic = function(matrix) {
   		}
   		return(out);
   	}
-  
-  
-  	void dfs( int row, int col, int height, 
+
+
+  	void dfs( int row, int col, int height,
                vector<vector<int> > & matrix, vector<vector<bool> > & visited )
   	{
   		if ( row < 0 || row >= matrix.size() ||
@@ -185,19 +177,19 @@ var pacificAtlantic = function(matrix) {
   		{
   			return;
   		}
-  
+
   		if ( visited[row][col] == true )
   		{
   			return;
   		}
-          
+
   		if ( height > matrix[row][col] )
   		{
   			return;
   		}
-  
+
   		visited[row][col] = true;
-  
+
   		dfs( row + 1, col, matrix[row][col], matrix, visited );
   		dfs( row - 1, col, matrix[row][col], matrix, visited );
   		dfs( row, col + 1, matrix[row][col], matrix, visited );
@@ -205,10 +197,6 @@ var pacificAtlantic = function(matrix) {
   	}
   };
   ```
-
-  
-
-
 
 ## 其他优秀解答
 
