--- a/problems/1526.minimum-number-of-increments-on-subarrays-to-form-a-target-array.md
+++ b/problems/1526.minimum-number-of-increments-on-subarrays-to-form-a-target-array.md
@@ -27,13 +27,13 @@ https://leetcode-cn.com/problems/minimum-number-of-increments-on-subarrays-to-fo
 
 输入：target = [3,1,1,2]
 输出：4
-解释：(initial)[0,0,0,0] -> [1,1,1,1] -> [1,1,1,2] -> [2,1,1,2] -> [3,1,1,2] (target) 。
+解释：(initial)[0,0,0,0] -> [1,1,1,1] -> [1,1,1,2] -> [2,1,1,2] -> [3,1,1,2](target) 。
 示例 3：
 
 输入：target = [3,1,5,4,2]
 输出：7
 解释：(initial)[0,0,0,0,0] -> [1,1,1,1,1] -> [2,1,1,1,1] -> [3,1,1,1,1]
-                                  -> [3,1,2,2,2] -> [3,1,3,3,2] -> [3,1,4,4,2] -> [3,1,5,4,2] (target)。
+                                  -> [3,1,2,2,2] -> [3,1,3,3,2] -> [3,1,4,4,2] -> [3,1,5,4,2](target)。
 示例 4：
 
 输入：target = [1,1,1,1]
@@ -102,8 +102,7 @@ class Solution:
         return ans
 ```
 
-**复杂度分析**
-令 N 为数组长度。
+**复杂度分析** 令 N 为数组长度。
 
 - 时间复杂度：$O(N)$
 - 空间复杂度：$O(N)$
@@ -128,8 +127,7 @@ class Solution:
         return ans
 ```
 
-**复杂度分析**
-令 N 为数组长度。
+**复杂度分析** 令 N 为数组长度。
 
 - 时间复杂度：$O(N)$
 - 空间复杂度：$O(1)$
