--- a/problems/53.maximum-sum-subarray-cn.en.md
+++ b/problems/53.maximum-sum-subarray-cn.en.md
@@ -24,10 +24,7 @@ If you have implemented a solution with a complexity of O(n), try to solve it us
 
 ## Company
 
--Ali
--Baidu
--Byte
--Tencent
+-Ali -Baidu -Byte -Tencent
 
 - bloomberg
 - linkedin
@@ -43,52 +40,43 @@ Under normal circumstances, start with the violent solution analysis, and then c
 
 **Original violent solution:**(timeout)
 
-To find the sum of the sub-sequence, then we need to know the position of the beginning and end of the sub-sequence, and then calculate the sum of the sequence between the beginning and the end. Use 2 for loops to enumerate the beginning and end positions of all sub-sequences.
-Then use a for loop to solve the sequence sum. The time complexity here is too high,`O(n^3)`.
+To find the sum of the sub-sequence, then we need to know the position of the beginning and end of the sub-sequence, and then calculate the sum of the sequence between the beginning and the end. Use 2 for loops to enumerate the beginning and end positions of all sub-sequences. Then use a for loop to solve the sequence sum. The time complexity here is too high,`O(n^3)`.
 
 **Complexity analysis**
 
--Time complexity:$O(N^3)$, where N is the length of the array
--Spatial complexity:$O(1)$
+-Time complexity:$O(N^3)$, where N is the length of the array -Spatial complexity:$O(1)$
 
 #### Solution 2-Prefix and + Violent solution
 
 **Optimized violent solution:** (shocked, actually AC)
 
-On the basis of the violent solution, we can optimize the violent solution`O(n^2)` with the prefix sum, where space is exchanged for time.
-Here you can use the original array to represent`PrefixSum`, saving space.
+On the basis of the violent solution, we can optimize the violent solution`O(n^2)` with the prefix sum, where space is exchanged for time. Here you can use the original array to represent`PrefixSum`, saving space.
 
-Finding the sequence sum can be optimized with the prefix sum (`PrefixSum`), given the beginning and end positions of the sub-sequence`(l, r),`
-Then the sequence and'subarraysum=PrefixSum[r]-PrefixSum[l-1];` Use a global variable'maxSum` to compare the sum of the sub-sequences solved each time,`maxSum = max(maxSum, subarraySum)'.
+Finding the sequence sum can be optimized with the prefix sum (`PrefixSum`), given the beginning and end positions of the sub-sequence`(l, r),` Then the sequence and'subarraysum=PrefixSum[r]-PrefixSum[l-1];` Use a global variable'maxSum` to compare the sum of the sub-sequences solved each time,`maxSum = max(maxSum, subarraySum)'.
 
 **Complexity analysis**
 
--Time complexity:$O(N^2)$, where N is the length of the array
--Spatial complexity:$O(N)$
+-Time complexity:$O(N^2)$, where N is the length of the array -Spatial complexity:$O(N)$
 
 > If you change the original array to represent prefixes and arrays, the spatial complexity is reduced to `O(1)`
 
 However, the time complexity is still too high, and can it be more optimized? The answer is yes, the prefix sum can also be optimized to`O(n)`.
 
-####Solution 3-Optimize the prefix and -from [**@lucifer**] (https://github.com/azl397985856 )
+####Solution 3-Optimize the prefix and -from [**@lucifer**](https://github.com/azl397985856)
 
 We define the function's(i)`, its function is to calculate the value starting from `0(including 0)` and adding to`i(including i)`.
 
 Then's(j)-S(i-1)`is equal to the value from`i`(including i) to`j` (including j).
 
-We further analyze, in fact, we only need to traverse once to calculate all's(i)`, where'i= 0,1,2,. . . . ,n-1. `
-Then we subtract the previous's(k)`, where'k= 0,1,2,. . . , i-1`, the minimum value can be. So we need
-Use a variable to maintain this minimum value, and also need a variable to maintain the maximum value.
+We further analyze, in fact, we only need to traverse once to calculate all's(i)`, where'i= 0,1,2,. . . . ,n-1. ` Then we subtract the previous's(k)`, where'k= 0,1,2,. . . , i-1`, the minimum value can be. So we need Use a variable to maintain this minimum value, and also need a variable to maintain the maximum value.
 
 **Complexity analysis**
 
--Time complexity:$O(N)$, where N is the length of the array
--Spatial complexity:$O(1)$
+-Time complexity:$O(N)$, where N is the length of the array -Spatial complexity:$O(1)$
 
-#### Solution 4-[Partition Method] (https://www.wikiwand.com/zh-hans/%E5%88%86%E6%B2%BB%E6%B3%95 )
+#### Solution 4-[Partition Method](https://www.wikiwand.com/zh-hans/%E5%88%86%E6%B2%BB%E6%B3%95)
 
-We divide the array "nums" into two parts: left ("left") and right ("right") at the middle position ("m"). Then there is，
-`left = nums[0]. . . nums[m-1]` and'return = nums[m + 1]. . . nums[n-1]`
+We divide the array "nums" into two parts: left ("left") and right ("right") at the middle position ("m"). Then there is， `left = nums[0]. . . nums[m-1]` and'return = nums[m + 1]. . . nums[n-1]`
 
 There are three situations where the position of the largest sub-sequence sum is as follows：
 
@@ -98,22 +86,19 @@ There are three situations where the position of the largest sub-sequence sum is
 
 The sum of the largest sub-sequences in the three cases is obtained separately, and the largest value of the three is the sum of the largest sub-sequences.
 
-For example, as shown in the figure below：
-![](https://p.ipic.vip/8i530l.jpg)
+For example, as shown in the figure below： ![](https://p.ipic.vip/8i530l.jpg)
 
 **Complexity analysis**
 
--Time complexity:$O(NlogN)$, where N is the length of the array
--Spatial complexity:$O(logN)$
+-Time complexity:$O(NlogN)$, where N is the length of the array -Spatial complexity:$O(logN)$
 
-####Solution 5-[Dynamic Planning] (https://www.wikiwand.com/zh-hans/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92 )
+####Solution 5-[Dynamic Planning](https://www.wikiwand.com/zh-hans/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92)
 
 The difficulty of dynamic programming is to find the state transition equation，
 
 'dp[i]-represents the maximum sub-sequence sum to the current position i`
 
-The state transition equation is：
-`dp[i] = max(dp[i - 1] + nums[i], nums[i])`
+The state transition equation is： `dp[i] = max(dp[i - 1] + nums[i], nums[i])`
 
 Initialization:`dp[0] = nums[0]`
 
@@ -126,13 +111,11 @@ From the state transition equation, we only focus on the value of the previous s
 - `currMaxSum = max(currMaxSum + nums[i], nums[i])`
 - `maxSum = max(currMaxSum, maxSum)`
 
-As shown in the figure：
-![](https://p.ipic.vip/1l599b.jpg)
+As shown in the figure： ![](https://p.ipic.vip/1l599b.jpg)
 
 **Complexity analysis**
 
--Time complexity:$O(N)$, where N is the length of the array
--Spatial complexity:$O(1)$
+-Time complexity:$O(N)$, where N is the length of the array -Spatial complexity:$O(1)$
 
 ## Analysis of key Points
 
@@ -186,20 +169,20 @@ _Javascript code_ from [**@lucifer**](https://github.com/azl397985856)
 
 ```javascript
 function LSS(list) {
-	const len = list.length;
-	let max = -Number.MAX_VALUE;
-	let sum = 0;
-	for (let i = 0; i < len; i++) {
-		sum = 0;
-		for (let j = i; j < len; j++) {
-			sum += list[j];
-			if (sum > max) {
-				max = sum;
-			}
-		}
-	}
+  const len = list.length;
+  let max = -Number.MAX_VALUE;
+  let sum = 0;
+  for (let i = 0; i < len; i++) {
+    sum = 0;
+    for (let j = i; j < len; j++) {
+      sum += list[j];
+      if (sum > max) {
+        max = sum;
+      }
+    }
+  }
 
-	return max;
+  return max;
 }
 ```
 
@@ -246,19 +229,19 @@ _Javascript code_ from [**@lucifer**](https://github.com/azl397985856)
 
 ```javascript
 function LSS(list) {
-	const len = list.length;
-	let max = list[0];
-	let min = 0;
-	let sum = 0;
-	for (let i = 0; i < len; i++) {
-		sum += list[i];
-		if (sum - min > max) max = sum - min;
-		if (sum < min) {
-			min = sum;
-		}
-	}
+  const len = list.length;
+  let max = list[0];
+  let min = 0;
+  let sum = 0;
+  for (let i = 0; i < len; i++) {
+    sum += list[i];
+    if (sum - min > max) max = sum - min;
+    if (sum < min) {
+      min = sum;
+    }
+  }
 
-	return max;
+  return max;
 }
 ```
 
@@ -327,30 +310,30 @@ _Javascript code_ from [**@lucifer**](https://github.com/azl397985856)
 
 ```javascript
 function helper(list, m, n) {
-	if (m === n) return list[m];
-	let sum = 0;
-	let lmax = -Number.MAX_VALUE;
-	let rmax = -Number.MAX_VALUE;
-	const mid = ((n - m) >> 1) + m;
-	const l = helper(list, m, mid);
-	const r = helper(list, mid + 1, n);
-	for (let i = mid; i >= m; i--) {
-		sum += list[i];
-		if (sum > lmax) lmax = sum;
-	}
+  if (m === n) return list[m];
+  let sum = 0;
+  let lmax = -Number.MAX_VALUE;
+  let rmax = -Number.MAX_VALUE;
+  const mid = ((n - m) >> 1) + m;
+  const l = helper(list, m, mid);
+  const r = helper(list, mid + 1, n);
+  for (let i = mid; i >= m; i--) {
+    sum += list[i];
+    if (sum > lmax) lmax = sum;
+  }
 
-	sum = 0;
+  sum = 0;
 
-	for (let i = mid + 1; i <= n; i++) {
-		sum += list[i];
-		if (sum > rmax) rmax = sum;
-	}
+  for (let i = mid + 1; i <= n; i++) {
+    sum += list[i];
+    if (sum > rmax) rmax = sum;
+  }
 
-	return Math.max(l, r, lmax + rmax);
+  return Math.max(l, r, lmax + rmax);
 }
 
 function LSS(list) {
-	return helper(list, 0, list.length - 1);
+  return helper(list, 0, list.length - 1);
 }
 ```
 
@@ -390,28 +373,26 @@ _Javascript code_ from [**@lucifer**](https://github.com/azl397985856)
 
 ```javascript
 function LSS(list) {
-	const len = list.length;
-	let max = list[0];
-	for (let i = 1; i < len; i++) {
-		list[i] = Math.max(0, list[i - 1]) + list[i];
-		if (list[i] > max) max = list[i];
-	}
+  const len = list.length;
+  let max = list[0];
+  for (let i = 1; i < len; i++) {
+    list[i] = Math.max(0, list[i - 1]) + list[i];
+    if (list[i] > max) max = list[i];
+  }
 
-	return max;
+  return max;
 }
 ```
 
 ## Extension
 
--If the array is a two-dimensional array, find the sum of the largest subarrays?
--If the product of the largest sub-sequence is required?
+-If the array is a two-dimensional array, find the sum of the largest subarrays? -If the product of the largest sub-sequence is required?
 
 ## Similar questions
 
 - [Maximum Product Subarray](https://leetcode.com/problems/maximum-product-subarray/)
 - [Longest Turbulent Subarray](https://leetcode.com/problems/longest-turbulent-subarray/)
 
-If you have any comments on this, please leave me a message. I will check the answers one by one when I have time. For more algorithm routines, you can visit my LeetCode problem solving warehouse:https://github.com/azl397985856/leetcode . There are already 37K stars.
-You can also pay attention to my public account "Force Buckle Plus" to take you to chew off the hard bone of the algorithm.
+If you have any comments on this, please leave me a message. I will check the answers one by one when I have time. For more algorithm routines, you can visit my LeetCode problem solving warehouse:https://github.com/azl397985856/leetcode . There are already 37K stars. You can also pay attention to my public account "Force Buckle Plus" to take you to chew off the hard bone of the algorithm.
 
-![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
+![](https://p.ipic.vip/n8gbxo.jpg)
