--- a/problems/108.convert-sorted-array-to-binary-search-tree.en.md
+++ b/problems/108.convert-sorted-array-to-binary-search-tree.en.md
@@ -169,6 +169,6 @@ return root
 
 For more questions, please visit my LeetCode questions warehouse:https://github.com/azl397985856/leetcode . There are already 37K stars.
 
-Public account 【[Force Buckle plus](https://p.ipic.vip/n8gbxo.jpg)】 Zhihu Column 【[Lucifer-Zhihu](https://www.zhihu.com/people/lu-xiao-13-70)】
+Public account 【[Force Buckle plus](https://p.ipic.vip/h9nm77.jpg)】 Zhihu Column 【[Lucifer-Zhihu](https://www.zhihu.com/people/lu-xiao-13-70)】
 
 Pay attention, don't get lost!
