--- a/problems/464.can-i-win.md
+++ b/problems/464.can-i-win.md
@@ -258,8 +258,10 @@ a & mask == 0 说明 a 在第二位（从低到高）是 0
 这就简单了，我们只需要将 1 左移 maxChoosableInteger + 1 位再减去 1 即可。一行代码搞定：
 
 ```py
-picked == (1 << (maxChoosableInteger + 1)) - 1
+picked == (1 << (maxChoosableInteger + 1)) - 2
 ```
+
+> 由于在这道题中，我们的 picked 最后一位永远是 0，因此这里是减 2 ，而不是 减 1。 具体参考这个 [issue](https://github.com/azl397985856/leetcode/issues/577)
 
 上面代码返回 true 表示满了， 否则没满。
 
@@ -365,7 +367,7 @@ class Solution:
         def dp(picked, acc):
             if acc >= desiredTotal:
                 return False
-            if picked == (1 << (maxChoosableInteger + 1)) - 1:
+            if picked == (1 << (maxChoosableInteger + 1)) - 2:
                 return False
             for n in range(1, maxChoosableInteger + 1):
                 if picked & 1 << n == 0:
