--- a/problems/1043.partition-array-for-maximum-sum.md
+++ b/problems/1043.partition-array-for-maximum-sum.md
@@ -57,9 +57,15 @@ https://leetcode-cn.com/problems/partition-array-for-maximum-sum/
 
 ### 思路
 
-这道题的思路无非就是暴力枚举所有的可能，求所有可能中的最大值即可。
+对于 对于题目给的例子 [1,15,7,9,2,5,10],k=3 第一次我们可以选择 [1] 或者 [1,15] 或者[1,15,7]。根据题意，将子数组内的元素变成子数组的最大值。也就是变为 [1] 或者 [15, 15] 或者 [1,15,7]。
 
-因此我们可以枚举所有的 i，然后计算区间 [i:j] 的可能区间和，其中 j 的取值范围是 [i:i+k]。如何对区间求和呢？ 其实也容易，只需要用一个变量 max_ele 记录区间最大值（这在遍历的时候可以同时取得），然后 max_ele \* (j-i+1) 即可，其中 j - i + 1 为区间的长度。这样我们就算出了区间 [i:i+k] 的区间和最大值。也就是说我们将问题规模缩小了，继续使用同样的方法直到问题缩小到寻常即可。使用递归可以轻松达到这一点。
+去掉这段子数组，例如去掉 [1,15,7]，剩余的要解决的问题是 [9,2,5,10]。这是一个和原问题完全一样但是规模更小的子问题，所以可以用递归解决。
+
+具体来说：
+
+- 我们可以枚举所有的 i，然后计算区间 [i:j] 的可能区间和，其中 j 的取值范围是 [i:i+k]。
+- 如何对区间求和呢？ 其实也容易，只需要用一个变量 max_ele 记录区间最大值（这在遍历的时候可以同时取得）。
+- 然后当前区间对答案的贡献就是 max_ele \* (j-i+1) ，其中 j - i + 1 为区间的长度。这样我们就算出了区间 [i:i+k] 的区间和最大值。也就是说我们将问题规模缩小了，继续使用同样的方法直到问题缩小到寻常即可。使用递归可以轻松达到这一点。
 
 ### 代码
 
