--- a/problems/1043.partition-array-for-maximum-sum.md
+++ b/problems/1043.partition-array-for-maximum-sum.md
@@ -97,7 +97,7 @@ class Solution:
 
 令 n 为数组长度。
 
-- 时间复杂度：$O(n^2)$
+- 时间复杂度：$O(n * k)$
 - 空间复杂度：$O(n)$
 
 ## 动态规划
@@ -140,7 +140,7 @@ class Solution:
 
 令 n 为数组长度。
 
-- 时间复杂度：$O(n^2)$
+- 时间复杂度：$O(n * k)$
 - 空间复杂度：$O(n)$
 
 > 此题解由 [力扣刷题插件](https://leetcode-pp.github.io/leetcode-cheat/?tab=solution-template) 自动生成。
