--- a/problems/139.word-break.md
+++ b/problems/139.word-break.md
@@ -44,17 +44,38 @@ https://leetcode-cn.com/problems/word-break/
 
 这道题是给定一个字典和一个句子，判断该句子是否可以由字典里面的单词组出来，一个单词可以用多次。
 
-暴力的方法是无解的，复杂度极其高。 我们考虑其是否可以拆分为小问题来解决。
-对于问题`(s, wordDict)` 我们是否可以用(s', wordDict) 来解决。 其中 s' 是 s 的子序列，
-当 s'变成寻常(长度为 0)的时候问题就解决了。 我们状态转移方程变成了这道题的难点。
+暴力的方法是无解的，复杂度比较高，但是可以通过。
 
-我们可以建立一个数组 dp, dp[i]代表 字符串 s.substring(0, i) 能否由字典里面的单词组成，经过这样的抽象我们就可以建立 dp[i - word.length] 和 dp[i] 的关系。它们有什么关系？又该如何转移呢？
+暴力思路是从匹配位置 0 开始匹配， 在 wordDict 中一个个找，如果其能和 s 匹配上就尝试进行匹配，并更新匹配位置。
+
+比如 s = "leetcode", wordDict = ["leet", "code"]。
+
+那么：
+
+- 先试试 leet 可以匹配么？可以的，匹配后 s 剩下 code，继续在 wordDict 中找。
+- leet 可以匹配么？不能！code 能够匹配么？可以！返回 true 结束
+
+如果 wordDict 遍历一次没有任何进展，那么直接返回 false。
+
+注意到如果匹配成功一次后，本质是把问题规模缩小了，问题性质不变，因此可以使用动态规划来解决。
+
+```py
+@cache
+def dp(pos):
+    if pos == len(s): return True
+    for word in wordDict:
+        if s[pos:pos+len(word)] == word and dp(pos + len(word)): return True
+    return False
+return dp(0)
+```
+
+复杂度为 $O(n^2 * m)$ 其中 n 为 s 长度， m 为 wordDict 长度。
 
 我们用图来感受一下：
 
 ![139.word-break-1](https://p.ipic.vip/5b21ws.jpg)
 
-没有明白也没有关系，我们分步骤解读一下：
+接下来我们以题目给的例子分步骤解读一下：
 
 （以下的图左边都代表 s，右边都是 dict，灰色代表没有处理的字符，绿色代表匹配成功，红色代表匹配失败）
 
@@ -71,9 +92,28 @@ https://leetcode-cn.com/problems/word-break/
 
 ![139.word-break-6](https://p.ipic.vip/yu4j2f.jpg)
 
+我们可以进一步优化， 使得复杂度和 m 无关。优化的关键是在 dp 函数内部枚举匹配的长度 k。这样我们截取 s[pos:pos+k] 其中 pos 表示当前匹配到的位置。然后只要看 s[pos:pos+k]  在 wordDict 存在与否就行。存在了就更新匹配位置继续，不存在就继续。而*看 s[pos:pos+k]  在 wordDict 存在与否就行* 是可以通过将 wordDict 中放入哈希集合中进行优化的，时间复杂度 O(1)，牺牲一点空间，空间复杂度 O(m)
+
 ## 代码
 
-代码支持： JS，CPP
+代码支持： Python3, JS，CPP
+
+Python3 Code:
+
+```py
+class Solution:
+    def wordBreak(self, s: str, wordDict: List[str]) -> bool:
+        wordDict = set(wordDict)
+        @cache
+        def dp(pos):
+            if pos == len(s): return True
+            cur = ''
+            for nxt in range(pos, len(s)):
+                cur += s[nxt]
+                if cur in wordDict and dp(nxt + 1): return True
+            return False
+        return dp(0)
+```
 
 JS Code:
 
@@ -123,10 +163,10 @@ public:
 
 **复杂度分析**
 
-令 S 和 W 分别为字符串和字典的长度。
+令 n 和 m 分别为字符串和字典的长度。
 
-- 时间复杂度：$O(S ^ 3)$
-- 空间复杂度：$O(S + W)$
+- 时间复杂度：$O(n ^ 2)$
+- 空间复杂度：$O(m)$
 
 大家对此有何看法，欢迎给我留言，我有时间都会一一查看回答。更多算法套路可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
 大家也可以关注我的公众号《力扣加加》带你啃下算法这块硬骨头。
