--- a/problems/42.trapping-rain-water.md
+++ b/problems/42.trapping-rain-water.md
@@ -41,7 +41,7 @@ https://leetcode-cn.com/problems/trapping-rain-water/
 
 这是一道雨水收集的问题， 难度为`hard`. 如图所示，让我们求下过雨之后最多可以积攒多少的水。
 
-如果采用暴力求解的话，思路应该是 height 数组依次求和，然后相加。
+如果采用暴力求解的话，思路应该是枚举每一个位置 i 下雨后的积水量，累加记为答案。
 
 - 伪代码
 
@@ -51,7 +51,7 @@ for (let i = 0; i < height.length; i++) {
 }
 ```
 
-问题转化为求 h，那么 h[i]又等于`左右两侧柱子的最大值中的较小值`，即
+问题转化为求 h 数组，这里 h[i] 其实等于`左右两侧柱子的最大值中的较小值`，即
 `h[i] = Math.min(左边柱子最大值, 右边柱子最大值)`
 
 如上图那么 h 为 [0, 1, 1, 2, 2, 2 ,2, 3, 2, 2, 2, 1]
@@ -155,6 +155,8 @@ int trap(vector<int>& heights)
 - 空间复杂度：$O(N)$
 
 ## 双指针
+
+这种解法为进阶解法， 大家根据自己的情况进行掌握。
 
 ### 思路
 
