--- a/problems/715.range-module.md
+++ b/problems/715.range-module.md
@@ -40,7 +40,9 @@ queryRange(16, 17): true （尽管执行了删除操作，区间 [16, 17) 中的
 
 - 暂无
 
-## 思路
+## 二分法
+
+### 思路
 
 直观的思路是使用端点记录已经被跟踪的区间，我们需要记录的区间信息大概是这样的：[(1,2),(3,6),(8,12)]，这表示 [1,2), [3,6), [8,12) 被跟踪。
 
@@ -105,12 +107,12 @@ class RangeModule(object):
 
 ![区间更新逻辑](https://p.ipic.vip/ovosah.jpg)
 
-## 关键点解析
+### 关键点解析
 
 - 二分查找的灵活使用（最左插入和最右插入）
 - 将区间一维化处理
 
-## 代码
+### 代码
 
 为了明白 Python 代码的含义，你需要明白 bisect_left 和 bisect_right，关于这两点我在[二分查找](https://github.com/azl397985856/leetcode/blob/master/91/binary-search.md "二分查找")专题讲地很清楚了，大家可以看一下。实际上这两者的区别只在于目标数组有目标值的情况，因此如果你搞不懂，可以尝试代入这种特殊情况理解。
 
@@ -155,9 +157,117 @@ addRange 和 removeRange 中使用 bisect_left 找到左端点 l，使用 bisect
 
 **复杂度分析**
 
-- 时间复杂度：$O(m * n)$，其中 m 和 n 分别为 A 和 B 的 长度。
-- 空间复杂度：$O(m * n)$，其中 m 和 n 分别为 A 和 B 的 长度。
+- 时间复杂度：$O(logn)$，其中 n 为跟踪的数据规模
+- 空间复杂度：$O(logn)$，其中 n 为跟踪的数据规模
 
+## 动态开点线段树
+
+### 思路
+
+我们可以用线段树来解决区间更新问题。 
+
+由于数据规模很大， 因此动态开点就比较适合了。
+
+插入的话就是区间 update 为 1， 删除就是区间 update 为 0，查找的话就看下区间和是否是区间长度即可。
+
+代码为我的插件（公众号力扣加加回复插件可以获得）中提供的模板代码，稍微改了一下 query。这是因为普通的 query 是查找区间和， 而我们如果不修改， 那么会超时。我们的区间和可以提前退出。如果区间和不等于区间长度就提前退出即可。
+
+### 代码
+
+代码支持：Python3
+
+Python3 Code:
+
+```py
+
+class Node:
+    def __init__(self, l, r):
+        self.left = None # 左孩子的指针
+        self.right = None # 右孩子的指针
+        self.l = l # 区间左端点
+        self.r = r # 区间右端点
+        self.m = (l + r) >> 1 # 中点
+        self.v = 0 # 当前值
+        self.add = -1   # 懒标记
+
+class SegmentTree:
+    def __init__(self,n):
+        # 默认就一个根节点，不 build 出整个树，节省空间
+        self.root = Node(0,n-1)  # 根节点
+
+    def update(self, l, r, v, node):
+        if l > node.r or r < node.l:
+            return
+        if l <= node.l and node.r <= r:
+            node.v = (node.r - node.l + 1) * v
+            node.add = v #   做了一个标记
+            return
+        self.__pushdown(node) # 动态开点。为子节点赋值，这个值就从 add 传递过来
+        if l <= node.m:
+            self.update(l, r, v, node.left)
+        if r > node.m:
+            self.update(l, r, v, node.right) 
+        self.__pushup(node) # 动态开点结束后，修复当前节点的值
+
+    def query(self, l, r,node):
+        if l > node.r or r < node.l:
+            return False
+        if l <= node.l and node.r <= r:
+            return node.v == node.r - node.l + 1
+        self.__pushdown(node) # 动态开点。为子节点赋值，这个值就从 add 传递过来
+        ans = True
+        if l <= node.m:
+            ans = self.query(l, r, node.left)
+        if ans and r > node.m:
+            ans = self.query(l, r, node.right)
+        return ans
+
+    def __pushdown(self,node):
+        if node.left is None:
+            node.left = Node(node.l, node.m)
+        if node.right is None:
+            node.right = Node(node.m + 1, node.r)
+        if node.add != -1:
+            node.left.v = (node.left.r - node.left.l + 1) * node.add
+            node.right.v = (node.right.r - node.right.l + 1) * node.add
+            node.left.add = node.add
+            node.right.add = node.add
+            node.add = -1
+
+    def __pushup(self,node):
+        node.v = node.left.v + node.right.v
+
+    def updateSum(self,index,val):
+        self.update(index,index,val,self.root)
+
+    def querySum(self,left,right):
+        return self.query(left,right,self.root)
+           
+class RangeModule:
+    def __init__(self):
+        self.tree = SegmentTree(10 ** 9)
+
+    def addRange(self, left: int, right: int) -> None:
+        self.tree.update(left, right - 1, 1, self.tree.root)
+
+    def queryRange(self, left: int, right: int) -> bool:
+        return not not self.tree.querySum(left, right - 1)
+
+    def removeRange(self, left: int, right: int) -> None:
+        self.tree.update(left, right - 1, 0, self.tree.root)
+
+# Your RangeModule object will be instantiated and called as such:
+# obj = RangeModule()
+# obj.addRange(left,right)
+# param_2 = obj.queryRange(left,right)
+# obj.removeRange(left,right)
+```
+
+**复杂度分析**
+
+- 时间复杂度：$O(logn)$，其中 n 为跟踪的数据规模
+- 空间复杂度：$O(logn)$，其中 n 为跟踪的数据规模
+- 
 更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
 
 关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
