fix typos in daily problems of 2019:

--- a/daily/2019-06-04.md
+++ b/daily/2019-06-04.md
@@ -16,7 +16,7 @@ Return the starting gas station's index if you can travel around the circuit onc
 ## 参考答案
 1.暴力求解，时间复杂度O(n^2)
 >
-我们可以一次遍历gas，对于每一个gas我们依次遍历后面的gas，计算remian，如果remain一旦小于0，就说明不行，我们继续遍历下一个
+我们可以一次遍历gas，对于每一个gas我们依次遍历后面的gas，计算remain，如果remain一旦小于0，就说明不行，我们继续遍历下一个
 ```js
 // bad 时间复杂度0（n^2）
 let remain = 0;
@@ -74,3 +74,8 @@ return total >= 0? start : -1;
 ## 优秀解答
 
 >暂缺
+
+
+
+
+
