--- a/daily/2019-07-25.md
+++ b/daily/2019-07-25.md
@@ -30,7 +30,7 @@ Example 3:
 
 Follow up:
 
-  Coud you solve it without converting the integer to a string?
+  Could you solve it without converting the integer to a string?
 ```
 
 ## 参考答案
