--- a/problems/1970.last-day-where-you-can-still-cross.md
+++ b/problems/1970.last-day-where-you-can-still-cross.md
@@ -67,9 +67,9 @@ cells 中的所有格子坐标都是 唯一 的。
 由于：
 
 - 如果第 n 天可以，那么小于 n 天都可以到达最后一行
-- 如果第 n 天不可以，那么大雨 n 天都无法到达最后一行
+- 如果第 n 天不可以，那么大于 n 天都无法到达最后一行
 
-基于此，我们可以想到使用能力检测二分中的**最右二分**。而这里的能力检测，我们可以使用 DFS 或者 BFS。而由于起点可能有多个（第一行的所有陆地），因此使用**多源 BFS** 复杂度会更好，因此我们这里选择 BFS 来做。
+这有很强的二段性。基于此，我们可以想到使用能力检测二分中的**最右二分**。而这里的能力检测，我们可以使用 DFS 或者 BFS。而由于起点可能有多个（第一行的所有陆地），因此使用**多源 BFS** 复杂度会更好，因此我们这里选择 BFS 来做。
 
 本题还有一种并查集的解法，也非常有意思。具体可参考力扣中国的[官方题解](https://leetcode-cn.com/problems/last-day-where-you-can-still-cross/solution/ni-neng-chuan-guo-ju-zhen-de-zui-hou-yi-9j20y/) 的方法二。
 
