--- a/problems/1218.longest-arithmetic-subsequence-of-given-difference.md
+++ b/problems/1218.longest-arithmetic-subsequence-of-given-difference.md
@@ -113,8 +113,14 @@ class Solution:
 
 **复杂度分析**
 
-- 时间复杂度：$O(N)$
-- 空间复杂度：$O(N)$
+令 n 为数组长度
+
+- 时间复杂度：$O(n)$
+- 空间复杂度：$O(n)$
+
+## 相关题目
+
+- [3041. 修改数组后最大化数组中的连续元素数目 ](./3041.maximize-consecutive-elements-in-an-array-after-modification.md)
 
 大家对此有何看法，欢迎给我留言，我有时间都会一一查看回答。更多算法套路可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
 大家也可以关注我的公众号《力扣加加》带你啃下算法这块硬骨头。
