--- a/problems/768.max-chunks-to-make-sorted-ii.md
+++ b/problems/768.max-chunks-to-make-sorted-ii.md
@@ -59,7 +59,7 @@ arr[i]的大小在[0, 10**8]之间。
 
 这里有一个关键点： **如果两个数组的计数信息是一致的，那么两个数组排序后的结果也是一致的。** 如果你理解计数排序，应该明白我的意思。不明白也没有关系， 我稍微解释一下你就懂了。
 
-如果我把一个数组打乱，然后排序，得到的数组一定是确定的，即不管你怎么打乱排好序都是一个确定的有序序列。这个论点的正确性是毋庸置疑的。而实际上，一个数组无论怎么打乱，其计数结果也是确定的，这也是毋庸置疑的。反之，如果是两个不同的数组，打乱排序后的结果一定是不同的，计数也是同理。
+如果我把一个数组打乱，然后排序，得到的数组一定是确定的，即不管你怎么打乱排好序都是一个确定的有序序列。这个论点的正确性是毋庸置疑的。而实际上，一个数组无论怎么打乱，其计数结果也是确定的，这也是毋庸置疑的。反之，如果是两个排序后不同的数组，打乱排序后的结果一定是不同的，计数也是同理。
 
 ![](https://p.ipic.vip/i9mrda.jpg)
 （这两个数组排序后的结果以及计数信息是一致的）
