--- a/problems/768.max-chunks-to-make-sorted-ii.md
+++ b/problems/768.max-chunks-to-make-sorted-ii.md
@@ -68,7 +68,7 @@ arr[i]的大小在[0, 10**8]之间。
 
 - 先排序 arr,不妨记排序后的 arr 为 sorted_arr
 - 从左到右遍历 arr，比如遍历到了索引为 i 的元素，其中 0 <= i < len(arr)
-- 如果 arr[:i+1] 的计数信息和 sorted_arr[:i+1] 的计数信息一致，那么说明可以分桶，否则不可以。
+- 如果 arr[:i+1] 的计数信息和 sorted_arr[:i+1] 的计数信息一致，那么说明可以**贪心地**切分，否则一定不可以分割。
 
 > arr[:i+1] 指的是 arr 的切片，从索引 0 到 索引 i 的一个切片。
 
