chore: 1793 更详细一点

--- a/problems/1793.maximum-score-of-a-good-subarray.md
+++ b/problems/1793.maximum-score-of-a-good-subarray.md
@@ -54,7 +54,7 @@ https://leetcode.cn/problems/maximum-score-of-a-good-subarray/description/
 
 容易想到的是从左向右遍历用一次单调栈，求每个位置 i 右侧第一个比它小的位置 right。再从右向左遍历用一次单调栈，求每个位置 i 左侧第一个比它小的位置 left。这样就可以求出每个位置的 left 和 right。
 
-不过我们用一个单调栈*从左向右遍历***也可以轻松完成。从左向右计算右边第一个比它小的简单，那么如果求左边第一个比它小的呢？举个例子你就明白了。比如 stack 目前是 [0,2,3]（stack 中存的是索引）。那么对于 stack 中的 3 来说，前面严格小于它的就是 stack 中它左侧相邻的索引 2。
+不过我们用一个单调栈**从左向右遍历**也可以轻松完成。从左向右计算右边第一个比它小的简单，那么如果求左边第一个比它小的呢？举个例子你就明白了。比如 stack 目前是 [0,2,3]（stack 中存的是索引）。那么对于 stack 中的 3 来说，前面严格小于它的就是 stack 中它左侧相邻的索引 2。
 
 ## 关键点
 
